refactor: доработка Model и исправление тестов в соответсвии с новыми геттерами
# Conflicts:
#	core-engine/src/test/java/ru/vsu/cs/cg/math/NormalsCalculatorTest.java